fixed timeline spacing

--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@
 
 .timeline-content p {
   color: white;
+  text-align: left;
   margin-bottom: 0;
 }
 
